--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "emailjs-com": "^2.4.1",
+    "firebase": "^7.14.6",
     "lodash-es": "4.17.11",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
